rendered/6/envoyage/templates/ingress.yml
---
# Source: envoyage/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envoyage
  annotations:
    # ALB Ingress Controller specific annotations
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-central-1:339713039480:certificate/f6f0e997-a8b4-45e8-9c91-4c1a343e1ce7"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "xbery-sandbox"
spec:
  ingressClassName: alb
  rules:
  - host: "ev-6.sandbox.xbery.online"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ev-6-envoyage
              port:
                number: 80
  tls:
  - hosts:
    - "ev-6.sandbox.xbery.online"
    secretName: envoyage-ssl-cert
